--- a/Island/index.html
+++ b/Island/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>island</title>
+    <link rel="stylesheet" href="./src/assets/css/newmint-ui.css">
   </head>
   <body>
     <div id="app"></div>
